🐞 Resolved background_image height in desktop
The issue is caused due to the background_image being smaller than the
required height

Resolve using `background-size`

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,6 +169,7 @@ div.product__price + button {
         min-height: 100%;
 
         background-image: url("../images/product-desktop.jpg");
+        background-size: cover;
         border-radius: 8px 0 0 8px;
     }
 
